--- a/app/src/style.css
+++ b/app/src/style.css
@@ -16,3 +16,91 @@ html, body {
   width: 100%;
   height: 100%;
 }
+#app {
+  position:absolute;
+  top:0;
+  right:0;
+  width:100%;
+  height:100%;
+  touch-action: none;
+  user-select: none;
+}
+#skill {
+  position:absolute;
+  right:1rem;
+  bottom:1rem;
+  display:grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap:0.5rem;
+}
+#skill > * {
+  width:5rem;
+  height:5rem;
+  border-radius: 100%;
+  background:#222831;
+}
+#skill > * {
+  font-weight: 900;
+}
+#health {
+  position: absolute;
+  left:1rem;
+  bottom:1rem;
+  background: transparent;
+  width:30rem;
+  height:5rem;
+  display: flex;
+}
+#health-icon {
+  background:#222831;
+  width:8rem;
+  height:8rem;
+  border-radius: 100%;
+  transform: translateY(-3rem);
+}
+#health-container {
+  position: absolute;
+  background:#222831;
+  top:0;
+  left:4rem;
+  width:100%;
+  height:100%;
+  border-radius: 0.1rem;
+  border-bottom-right-radius: 3rem;
+  display:flex;
+  flex-direction: column;
+  padding:1rem;
+  padding-left: 4.5rem;
+  padding-right: 2rem;
+}
+#health-bar {
+  position: relative;
+  background:darkred;
+  width:100%;
+  height:2.5rem;
+  border-radius: 100rem;
+  border:0.3rem solid #FFD66B;
+  overflow:hidden
+}
+#health-bar::before {
+  content: '';
+  position:absolute;
+  top:0;
+  left:0;
+  width:var(--percentage);
+  transition:width 0.5s ease-out;
+  height:100%;
+  background: crimson;
+}
+#health-number {
+  height:2.5ch;
+  font-weight: 900;
+  color:#E5EFCB;
+}
+#health-number::before {
+  content: var(--text);
+  height: 2.5ch;
+  font-weight: 900;
+  color: #E5EFCB;
+}
